--- a/influcid-Uzbekistan/index-usb.html
+++ b/influcid-Uzbekistan/index-usb.html
@@ -33,7 +33,7 @@
                 <li><a class="navmenu" href="#block-3" >Tarkibi</a></li>
                 <li><a class="navmenu" href="#block-4" >Qollanilishi</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-                <li><a href="index.html" >узб</a></li>
+                <li><a href="index.html" >узб</a><br><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -43,7 +43,10 @@
               <a class="navmenu" href="#block-3" >Tarkibi</a>
               <a class="navmenu" href="#block-4" >Qollanilishi</a>
               <a target="_blank" class="where-to-buy" href="./where_buy.pdf" >kaerda bor</a>
+            <div class="lang">
               <a href="index.html" >узб</a>
+              <a href="index-ru.html" >ru</a>
+            </div>
           </div>
           <a target="_blank" class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">kullash<br> boyicha<br> yuriknoma</p></a
