--- a/influcid-Uzbekistan/index.html
+++ b/influcid-Uzbekistan/index.html
@@ -33,7 +33,7 @@
                 <li><a class="navmenu" href="#block-3" >Таркиби</a></li>
                 <li><a class="navmenu" href="#block-4" >Кулланилиши</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-                <li><a href="index-usb.html" >uzb</a></li>
+                <li><a href="index-usb.html" >uzb</a><br><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -43,7 +43,11 @@
               <a class="navmenu" href="#block-3" >Таркиби</a>
               <a class="navmenu" href="#block-4" >Кулланилиши</a>
               <a target="_blank" class="where-to-buy" href="./where_buy.pdf" >КАЕРДА БОР</a>
-              <a href="index-usb.html" >uzb</a>
+              <div class="lang">
+                <a href="index-usb.html" >uzb</a>
+                <a href="index-ru.html" >ru</a>
+              </div>
+
           </div>
           <a target="_blank" class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">kуллаш<br> буйича<br> йурикнома</p></a
