--- a/prospan-international/index.html
+++ b/prospan-international/index.html
@@ -266,8 +266,7 @@
 
 
 
-                <p>Кашель – это очень распространенный симптом, негативно влияющий на качество жизни. Примерно 30% населения страдает этим недугом, а в период обострения острых инфекционных заболеваний этот показатель может увеличиваться до 60-80%.</p> 
-                <p>Кашель — это не болезнь, а реакция организма на различные патологические процессы, связанные с дыхательными путями<sup>2</sup>.</p>
+                <p>Кашель – это очень распространенный симптом, негативно влияющий на качество жизни. Примерно 30% населения страдает этим недугом, а в период обострения острых инфекционных заболеваний этот показатель может увеличиваться до 60-80%1. Кашель — это не болезнь, а реакция организма на различные патологические процессы, связанные с дыхательными путями<sup>2</sup>.</p>
 
                 <p>Клинически кашель подразделяют на продуктивный и сухой, хотя границы между этими категориями нечеткие. Продуктивный кашель в 24 часов обычно приводит к выделению 30 мл мокроты (что эквивалентно объему 2 столовых ложек).</p>
 
@@ -310,7 +309,7 @@
                 <div class="panel-img panel-img3"></div>
                 <p>В связи с тяжелыми приступами кашля у своей дочери, страдавшей от коклюша, д-р Карл Энгельгард (Karl Engelhard), фармацевт и владелец компании «Engelhard Arzneimittel GmbH & Co. KG» в 3-м поколении, в 1949 году начал исследования лечебных свойств растения Hedera helix, которое было известно своим свойством устранять кашель.</p>
 
-                <p>В ходе исследований ученые из лаборатории Энгельгарда обнаружили, что листья – это та часть Hedera helix, в котором содержится наивысшая концентрация активных ингредиентов растения. Для получения действующего вещества препарата Prospan® был разработан специальный метод экстракции. Так в 1950 году появился первый лекарственный препарат Prospan® (капли Prospan®). Дальнейшие научные исследования привели к разработке других лекарственных форм, например, сироп от кашля Prospan® (продается в Германии с 1991 г.) – не содержащий алкоголя, сахара и красителей экстракт плюща, который к тому же имеет очень приятный вишневый вкус, и поэтому особенно хорошо воспринимается детьми.</p>
+                <p>В ходе исследований ученые из лаборатории Энгельгарда обнаружили, что листья – это та часть Hedera helix, в котором содержится наивысшая концентрация активных ингредиентов растения. Для получения действующего вещества препарата Prospan® был разработан специальный метод экстракции. Так в 1950 году появился первый лекарственный препарат Prospan® (капли Prospan®). Дальнейшие научные исследования привели к разработке других лекарственных форм, например, Сироп от кашля Prospan® (продается в Германии с 1991 г.) – не содержащий алкоголя, сахара и красителей экстракт плюща, который к тому же имеет очень приятный вишневый вкус, и поэтому особенно хорошо воспринимается детьми.</p>
 
                 <p>Проспан - препарат от кашля из Германии.</p>
             </div>
