--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -228,8 +228,8 @@
         </div>
         <form action="/send.php" method="POST">
             <div class="form-top">
-                <input class="inp-name" id="name" type="text" placeholder="Imię" required>
-                <input class="inp-email" id="messanger-contact" type="email" placeholder="E-mail"
+                <input class="inp-name" id="name" name="name" type="text" placeholder="Imię" required>
+                <input class="inp-email" id="messanger-contact" name="messanger-contact" type="email" placeholder="E-mail"
                         required>
             </div>
             <div class="inp-text">
