--- a/SwissPharm/index.html
+++ b/SwissPharm/index.html
@@ -268,15 +268,15 @@
                  <div class="form-top">
                      <div>
                          <p>First Name</p>
-                         <input class="inp-name" id="name" type="text" required>
+                         <input class="inp-name" id="name" name="name" type="text" required>
                      </div>
                      <div>
                          <p>Last Name</p>
-                         <input class="inp-lastname" id="lastname" type="text" required>
+                         <input class="inp-lastname" id="lastname" name="lastname" type="text" required>
                      </div>
                      <div>
                          <p>E-mail</p>
-                         <input class="inp-email" id="messanger-contact" type="email" required>
+                         <input class="inp-email" id="messanger-contact" name="messanger-contact" type="email" required>
                      </div>
                      <div>
                          <p>Message</p>
