--- a/influcid-Uzbekistan/index-ru.html
+++ b/influcid-Uzbekistan/index-ru.html
@@ -468,7 +468,7 @@
             </div>
 
             <div class="block-7">
-              <h2>Где купить</h2>
+              <!-- <h2>Где купить</h2> -->
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Доказательная база</h3>
