--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<a href="influcid-LT/index.html">influcid-LT</a>
 			<a href="Tansilotren-Li/index.html">Tansilotren-Li</a>
 			<a href="SwissPharm/index.html">SwissPharm</a>
-			<a href="prospan-new/index.html">prospan-new</a>
+			<a href="prospan-new/index.html">prospan-by</a>
 			
 		</section>
 	</main>
@@ -215,7 +215,7 @@
 		background: url("./SwissPharm/logo.svg")no-repeat center / contain;
 	}
 	a:nth-child(43)::before {
-		background: url("./prospan-new/logo.svg")no-repeat center / contain;
+		background: url("./prospan-by/logo.svg")no-repeat center / contain;
 	}
 </style>
 
