--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<a href="influcid-LT/index.html">influcid-LT</a>
 			<a href="Tansilotren-Li/index.html">Tansilotren-Li</a>
 			<a href="SwissPharm/index.html">SwissPharm</a>
-			<a href="prospan-new/index.html">prospan-by</a>
+			<a href="prospan-by/index.html">prospan-by</a>
 			
 		</section>
 	</main>
