--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -413,7 +413,7 @@
         <div class="block-5__plate">
             <div class="block-5__text">
                 <h4>Мигдалики видалити не можна залишити.<br>Де поставити кому?</h4>
-                <p>Сучасні тенденції в лікуванні хронічного тонзиліту у дітей ґрунтуються на максимально <b>дбайливому ставленні до миндаликів</b> як імунокомпетентного органу (органу, що відповідає за імунітет), видалення яких виправдано тільки у випадках доведеної функціональної непридатності і та значному збільшенні мигдаликів.</p>
+                <p>Сучасні тенденції в лікуванні хронічного тонзиліту у дітей ґрунтуються на максимально <b>дбайливому ставленні до мигдаликів</b> як імунокомпетентного органу (органу, що відповідає за імунітет), видалення яких виправдано тільки у випадках доведеної функціональної непридатності або значному збільшенні мигдаликів.</p>
             </div>
             <div class="block-5__img"></div>
         </div>
@@ -434,11 +434,10 @@
                     - усунення запального процесу в піднебінних мигдаликах;<br>
                     - поліпшення дренажної функції лакун піднебінних мигдаликів;<br>
                     - нормалізація місцевого і загального імунітету.<br>
-                    <p>Для поліпшення дренажної функції лакун піднебінних мигдалин застосовують відсмоктування гнійного вмісту, промивання антисептичними розчинами, масаж піднебінних мигдалин, аплікації на їх поверхню різних препаратів.</p>
+                    <p class='shitty-style'>Для поліпшення дренажної функції лакун піднебінних мигдалин застосовують відсмоктування гнійного вмісту, промивання антисептичними розчинами, масаж піднебінних мигдалин, аплікації на їх поверхню різних препаратів.</p>
                     <p>Для підвищення місцевого і загального імунітету застосовують препарати з імуномоделюючою дією.
                         Курс консервативної терапії проводять кожні 6 місяців. При відсутності позитивного результату після 2-3 курсів лікарі вирішують питання про хірургічне лікування (тонзилектомія)<sup>1</sup>.<br>
-                        Більше 80 років для базисної терапії тонзиліту застосовується натуральний препарат Тонзилотрен.<br>
-                        Тонзилотрен має системну протизапальну дію, а також відновлює захисну функцію мигдаликів і показники загального імунітету.</p>
+                    </p>
                 <p><b>Ангіна? Лікуємо правильно – ТОНЗИЛОТРЕН</b></p>
                 <p>1 Дитячий лікар 6 (13) 2011, Хронічний тонзиліт у дітей: актуальні питання лікування та профілактики.</p>
                 </p>
@@ -562,7 +561,7 @@
     <div class="disclamer-tra__inner">
         <div class="disclamer-tra">
             <p class="dt1">
-                Реклама лікарського засобу. Перед застосуванням уважно ознайомтесь з інструкцією та проконсультуйтеся з лікарем. РП Тонзилотрен № UA/3781/01/01 від 20.08.2015. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ,
+                Реклама лікарського засобу. Перед застосуванням уважно ознайомтесь з інструкцією та проконсультуйтеся з лікарем. РП Тонзилотрен № UA/3781/01/01 від 30.07.2020. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ,
                 Пуща-Водиця, 04075; телефон: (044) 401-81-03.
             </p>
 
