--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -168,18 +168,19 @@
                     <div class="popup__message">
                         <p><b>Діти від 2 до 6 років </b></p>
 
-                        <p><b>При гострих станах або при подальшому лікуванні:</b> по 1 табл. 3 рази на добу.</p>
+                        <p><b>При гострих станах і при подальшому лікуванні або при хронічних станах:</b> по 1 таблетці 3 рази на добу.</p>
 
                         <p><b>При збільшенні піднебінних мигдаликів:</b> 
-                            по 1 табл. 3 рази на добу,
+                            по 1 таблетці 3 рази на добу,
                             6-8 тижнів.</p>
 
-                        <p><b>При схильності до ангін для профілактики повторних епізодів: </b>
-                            по 1 табл. 3 рази на добу,
-                            6-8 тижнів
-                            кілька курсів на рік.</p>
+                        <p>
+                            Якщо після завершення 8 днів лікування не спостерігається покращення, то слід проконсультуватися з лікарем.
+                        </p>
 
                         <p>Таблетки приймати за 30 хвилин до або через 30 хвилин після їди, повільно розсмоктуючи в ротовій порожнині.</p>
+                        <p>Тривалість курсу лікування визначає лікар індивідуально.
+                        </p>
 
                     </div>
                 </div>
@@ -196,20 +197,22 @@
                     <div class="popup__message">
                         <p><b>Діти від 6 до 12 років</b></p>
 
-                        <p><b>Гострий період:</b> по 1 табл. кожні 2 години
-                            (до 6 разів на добу) перші 1-2 дні до покращення стану.</p>
+                        <p><b>Гострий період:</b> по 1 таблетці кожні 2 години
+                            (до 6 таблеток на добу) до покращення стану.</p>
 
-                        <p><b>При подальшому лікуванні:</b> по 1 табл. 3 рази на добу до повного одужання.
-                            *Якщо після 8 днів лікування не спостерігається повного одужання або з'явилися нові симптоми захворювання, слід обов'язково звернутися до лікаря.</p>
+                        <p><b>При подальшому лікуванні або при хронічних станах:</b> по 1 таблетці 3 рази на добу до повного одужання.</p>
 
-                        <p><b>При збільшенні піднебінних мигдаликів:</b> по 1 табл. 3 рази на добу,
-                            6-8 тижнів.</p>
+                        <p><b>При збільшенні піднебінних мигдаликів:</b> по 1 таблетці 3 рази на добу,
+                            </p>
 
-                        <p><b>При схильності до ангін для профілактики повторних епізодів:</b> по 1 табл. 3 рази на добу,
-                            6-8 тижнів
-                            кілька курсів на рік.</p>
+                        <p>
+                            Якщо після завершення 8 днів лікування не спостерігається покращення, то слід проконсультуватися з лікарем.
+                        </p>
 
                         <p>Таблетки приймати за 30 хвилин до або через 30 хвилин після їди, повільно розсмоктуючи в ротовій порожнині.</p>
+                        <p>
+                            Тривалість курсу лікування визначає лікар індивідуально.
+                        </p>
 
                     </div>
                 </div>
@@ -227,26 +230,24 @@
 
                     	<p><b>Діти старше 12 років та дорослі</b></p>
 
-                        <p><b>Гострий період:</b>по 1 табл. кожну годину (до 12 разів на добу) перші 1-2 дні до покращення стану.</p>
+                        <p><b>Гострий період:</b>по 1 таблетці кожну годину (до 12 таблеток на добу) до покращення стану.</p>
 
-                        <p><b>При подальшому лікуванні:</b>
+                        <p><b>При подальшому лікуванні або при хронічних станах:</b>
 
-                     	по 1-2 табл. 3 на добу до повного одужання.</p>
+                     	по 1-2 таблетки 3 на добу до повного одужання.</p>
 
-                        <p><sup>*</sup>Якщо після 7 днів лікування не спостерігається повного одужання або з'явилися нові симптоми захворювання, слід обов'язково звернутися до лікаря.</p>
+
 
                         <p><b>При збільшенні піднебінних мигдаликів:</b>
 
-                        по 1 табл. 3 рази на добу
-                            6-8 тижнів.</p>
+                        по 1 таблетці 3 рази на добу</p>
+                        <p>
+                            Якщо після завершення 8 днів лікування не спостерігається покращення, то слід проконсультуватися з лікарем.
+                        </p>
 
-                        <p><b>При схильності до ангін для профілактики повторних епізодів:</b>
-
-                        по 1 табл. 3 рази на добу,
-                            6-8 тижнів
-                            кілька курсів на рік.</p>
 
                         <p>Таблетки приймати за 30 хвилин до або через 30 хвилин після їди, повільно розсмоктуючи в ротовій порожнині.</p>
+                        <p>Тривалість курсу лікування визначає лікар індивідуально.</p>
 
                     </div>
                 </div>
