--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -171,8 +171,7 @@
                         <p><b>При гострих станах і при подальшому лікуванні або при хронічних станах:</b> по 1 таблетці 3 рази на добу.</p>
 
                         <p><b>При збільшенні піднебінних мигдаликів:</b> 
-                            по 1 таблетці 3 рази на добу,
-                            6-8 тижнів.</p>
+                            по 1 таблетці 3 рази на добу.</p>
 
                         <p>
                             Якщо після завершення 8 днів лікування не спостерігається покращення, то слід проконсультуватися з лікарем.
@@ -230,7 +229,7 @@
 
                     	<p><b>Діти старше 12 років та дорослі</b></p>
 
-                        <p><b>Гострий період:</b>по 1 таблетці кожну годину (до 12 таблеток на добу) до покращення стану.</p>
+                        <p><b>Гострий період:</b> по 1 таблетці кожну годину (до 12 таблеток на добу) до покращення стану.</p>
 
                         <p><b>При подальшому лікуванні або при хронічних станах:</b>
 
