--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -201,7 +201,7 @@
 
                         <p><b>При подальшому лікуванні або при хронічних станах:</b> по 1 таблетці 3 рази на добу до повного одужання.</p>
 
-                        <p><b>При збільшенні піднебінних мигдаликів:</b> по 1 таблетці 3 рази на добу,
+                        <p><b>При збільшенні піднебінних мигдаликів:</b> по 1 таблетці 3 рази на добу.
                             </p>
 
                         <p>
@@ -239,7 +239,7 @@
 
                         <p><b>При збільшенні піднебінних мигдаликів:</b>
 
-                        по 1 таблетці 3 рази на добу</p>
+                        по 1 таблетці 3 рази на добу.</p>
                         <p>
                             Якщо після завершення 8 днів лікування не спостерігається покращення, то слід проконсультуватися з лікарем.
                         </p>
