--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -23,7 +23,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Where to buy</a>
+          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Kur įsigyti</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
