--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -81,7 +81,7 @@
           <div class="product-bottle"></div>
         </div>
         <div class="product-tagline">
-          <p>Nemate vremena biti bolesni? - Alpikol!</p>
+          <p>Moćna sinergija prirodnih sastojaka! – Alpikol</p>
         </div>
       </div>
     </div>
@@ -281,7 +281,7 @@
     <map>
       <h3 class="translated-text" key="buy-text">GDJE KUPITI</h3>
       <div class="map-content">
-      	<a class="source source-6" href="https://www.farmacia.hr/brandovi/alpen-pharma/alpikol-sirup-za-zastitu-organizma/"></a>
+      	<a class="source source-6" href="https://www.farmacia.hr/brandovi/alpen-pharma/alpikol-sirup/"></a>
         
         <a class="source source-2" href="https://www.mojaljekarna.hr/imunitet/12344-alpikol-tekuci-dodatak-prehrani.html"></a>
 
