--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -74,7 +74,18 @@
     <!--  content-->
 
     <div class="block-1">
-      <div class="block-1__bg"></div>
+      <div class="block-1__bg">
+        <h1>
+          Spremite se za zim<br>
+          <span>i otkrijte  kako će Obitelj superjunaka</span><br>
+          pobjediti zle viruse
+        </h1>
+      </div>
+      <h1 class="h1-mob">
+        Spremite se za zim<br>
+        <span>i otkrijte  kako će Obitelj superjunaka</span><br>
+        <span class="span-stupid">pobjediti zle viruse</span>
+      </h1>
       <div class="block-1__info">
         <div class="product-container">
           <div class="product-box"></div>
