--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -20,25 +20,25 @@
       <a href="index.html" class="logo">Alpikol</a>
       <div class="navigation-top" role="navigation">
         <div id="menuToggle">
-          <input type="checkbox" /> <span></span> <span></span> <span></span>
+          <input class="this-inpt" type="checkbox" /> <span></span> <span></span> <span></span>
           <ul id="menu">
             <li>
-              <a class="translated-text navmenu" key="g1" href="#diagnosis"
+              <a class="translated-text navmenu menuLi1" key="g1" href="#diagnosis"
                 >KADA PRIMIJENITI</a
               >
             </li>
             <li>
-              <a class="translated-text navmenu" key="g2" href="#overrun"
+              <a class="translated-text navmenu menuLi2" key="g2" href="#overrun"
                 >SASTAV</a
               >
             </li>
             <li>
-              <a class="translated-text navmenu" key="g3" href="#composition"
+              <a class="translated-text navmenu menuLi3" key="g3" href="#composition"
                 >NAČIN PRIMJENE</a
               >
             </li>
             <li>
-              <a class="translated-text navmenu" key="g5" href="#map"
+              <a class="translated-text navmenu menuLi4" key="g5" href="#map"
                 >GDJE KUPITI</a
               >
             </li>
