--- a/Tansilotren-Ukraine/index-ru.html
+++ b/Tansilotren-Ukraine/index-ru.html
@@ -431,7 +431,7 @@
                     - устранение воспалительного процесса в небных миндалинах;<br>
                     - улучшение дренажной функции лакун небных миндалин;<br>
                     - нормализация местного и общего иммунитета.<br>
-                    <p>Для улучшения дренажной функции лакун небных миндалин применяют отсасывание гнойного содержимого,
+                    <p  class="strange-p">Для улучшения дренажной функции лакун небных миндалин применяют отсасывание гнойного содержимого,
                     промывание антисептическими растворами, массаж небных миндалин, аппликации на их поверхность различных
                         препаратов.</p>
                     <p>Для повышения местного и общего иммунитета применяют препараты с иммуномодулирующим действием.
