--- a/Tansilotren-Ukraine/index.html
+++ b/Tansilotren-Ukraine/index.html
@@ -434,7 +434,7 @@
                     - усунення запального процесу в піднебінних мигдаликах;<br>
                     - поліпшення дренажної функції лакун піднебінних мигдаликів;<br>
                     - нормалізація місцевого і загального імунітету.<br>
-                    <p class='shitty-style'>Для поліпшення дренажної функції лакун піднебінних мигдалин застосовують відсмоктування гнійного вмісту, промивання антисептичними розчинами, масаж піднебінних мигдалин, аплікації на їх поверхню різних препаратів.</p>
+                    <p class="strange-p">Для поліпшення дренажної функції лакун піднебінних мигдалин застосовують відсмоктування гнійного вмісту, промивання антисептичними розчинами, масаж піднебінних мигдалин, аплікації на їх поверхню різних препаратів.</p>
                     <p>Для підвищення місцевого і загального імунітету застосовують препарати з імуномоделюючою дією.
                         Курс консервативної терапії проводять кожні 6 місяців. При відсутності позитивного результату після 2-3 курсів лікарі вирішують питання про хірургічне лікування (тонзилектомія)<sup>1</sup>.<br>
                     </p>
