--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -433,7 +433,7 @@
                 - elimination of the inflammatory process in the palatine tonsils;<br>
                 - improvement of drainage function of lacunae of the palatine tonsils;<br>
                 - normalization of local and general immunity.<br>
-                <p>To improve the drainage function of the lacunae of the Palatine tonsils, suction of purulent contents, rinsing with antiseptic solutions, massage of the tonsils, application of various preparations on their surface are used.
+                <p  class="strange-p">To improve the drainage function of the lacunae of the Palatine tonsils, suction of purulent contents, rinsing with antiseptic solutions, massage of the tonsils, application of various preparations on their surface are used.
                     To increase local and general immunity, drugs with an immunomodulatory effect are used.</p>
                 <p>The course of conservative therapy is carried out every 6 months. If there is no positive result after 2-3 courses, doctors shall decide as for surgical treatment (tonsillectomy)<sup>1</sup>.<br>
                     For more than 80 years, for the basic treatment of tonsillitis, the natural preparation Tonsilotren<br> has been used. Tonsilotren has a systemic anti-inflammatory effect, and also restores the protective function of the tonsils and indicators of general immunity.</p>
