--- a/Tansilotren-Ukraine/index-ru.html
+++ b/Tansilotren-Ukraine/index-ru.html
@@ -167,18 +167,17 @@
                     <div class="popup__message">
                         <p><b>Дети от 2 до 6 лет </b></p>
 
-                        <p><b>При острых состояниях или для поддерживающей терапии:</b> по 1 табл. 3 раза в сутки.</p>
+                        <p><b>При острых состояниях и при дальнейшем лечении или при хронических состояниях: </b> по 1 табл. 3 раза в сутки.</p>
 
-                        <p><b>При увеличении небных миндалин:</b> 
-                            по 1 табл. 3 раза в сутки, 
-                            6-8 недель.</p>
+                        <p><b>При увеличении небных миндалин: </b> 
+                            по 1 табл. 3 раза в сутки.</p>
 
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов: </b>
-                            по 1 табл. 3 раза в сутки,
-                            6-8 недель
-                            несколько курсов в год.</p>
+                            <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом. </p>
 
-                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
+
+                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в ротовой полости. </p>
+
+                        <p>Продолжительность курса лечения определяет врач индивидуально. </p>
 
                     </div>
                 </div>
@@ -195,17 +194,19 @@
                     <div class="popup__message">
                         <p><b>Дети от 6 до 12 лет</b></p>
 
-                        <p><b>Острый период:</b> по 1 табл. каждые 2 часа (до 6 раз в день)
-                            первые 1-2 дня до улучшения.</p>
+                        <p><b>Острый период: </b> по 1 таблетке каждые 2 часа (до 6 таблеток в сутки) до улучшения.</p>
 
-                        <p><b>Поддерживающая терапия:</b> по 1 табл. 3 раза в день до полного выздоровления.
-                            *Если после 8 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
+                        <p><b>При дальнейшем лечении или при хронических состояниях: </b> по 1 таблетке 3 раза в день до полного выздоровления.</p>
 
-                        <p><b>При увеличении небных миндалин:</b> по 1 табл. 3 раза в день, 6-8 недель.</p>
+                        <p><b>При увеличении небных миндалин: </b> по 1 таблетке 3 раза в день.</p>
 
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b> по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p>
+                        <p><b>При склонности к ангинам для профилактики повторных эпизодов: </b> по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p>
 
-                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
+                        <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом. </p>
+
+                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в ротовой полости. </p>
+
+                        <p>Продолжительность курса лечения определяет врач индивидуально. </p>
 
                     </div>
                 </div>
@@ -220,28 +221,24 @@
                 </button>
                 <div class="popup__body">
                     <div class="popup__message">
+                        <p><b>Дети старше 12 лет и взрослые </b></p>
 
-                        <p><b>Дети старше 12 лет и взрослые</b></p>
+                        <p><b>Острый период: </b>по 1 таблетке каждый час (до 12 таблеток в сутки) до улучшения.
+                        </p>
 
-                        <p><b>Острый период:</b>по 1 табл. каждый час (до 12 раз в день) первые 1-2 дня до улучшения.</p>
+                        <p><b>При дальнейшем лечении или при хронических состояниях:</b>
 
-                        <p><b>Поддерживающая терапия:</b>
+                        по 1-2 таблетке 3 раза в день до полного выздоровления.</p>
 
-                        по 1-2 табл. 3 раза в день до полного выздоровления.</p>
+                        
 
-                        <p><sup>*</sup>Если после 7 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
+                        <p><b>При увеличении небных миндалин: </b>по 1 таблетке 3 раза в день. </p>
 
-                        <p><b>При увеличении небных миндалин:</b>
+                        <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом. </p>
 
-                        по 1 табл. 3 раза в день 6-8 недель.</p>
+                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в ротовой полости. </p>
 
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b>
-
-                        по 1 табл. 3 раза в день,
-                            6-8 недель
-                            несколько курсов в год.</p>
-
-                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
+                        <p>Продолжительность курса лечения определяет врач индивидуально. </p>
 
                     </div>
                 </div>
