--- a/Tansilotren-Ukraine/index-ru.html
+++ b/Tansilotren-Ukraine/index-ru.html
@@ -167,10 +167,10 @@
                     <div class="popup__message">
                         <p><b>Дети от 2 до 6 лет </b></p>
 
-                        <p><b>При острых состояниях и при дальнейшем лечении или при хронических состояниях: </b> по 1 табл. 3 раза в сутки.</p>
+                        <p><b>При острых состояниях и при дальнейшем лечении или при хронических состояниях: </b> по 1 таблетке 3 раза в сутки.</p>
 
                         <p><b>При увеличении небных миндалин: </b> 
-                            по 1 табл. 3 раза в сутки.</p>
+                            по 1 таблетке 3 раза в сутки.</p>
 
                             <p>Если после завершения 8 дней лечения не наблюдается улучшения, то следует проконсультироваться с врачом. </p>
 
