--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -39,7 +39,7 @@
                 <li><a class="navmenu" href="#block-3" >Tərkibi</a></li>
                 <li><a class="navmenu" href="#block-4" >Necə qəbul etməli</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-                <!-- <li><a href="index-ru.html" >ru</a></li> -->
+                <li><a href="" >az</a><br><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -48,8 +48,11 @@
               <a class="navmenu" href="#block-2" >Təsiri</a>
               <a class="navmenu" href="#block-3" >Tərkibi</a>
               <a class="navmenu" href="#block-4" >Necə qəbul etməli</a>
-              <a class="where-to-buy" href="#block-5" >Haradan almalı</a>
-              <!-- <a href="index-ru.html" >ru</a> -->
+<!--              <a class="where-to-buy" href="#block-5" >Haradan almalı</a>-->
+            <div class="lang">
+              <a href="" >az</a>
+              <a href="index-ru.html" >ru</a>
+            </div>
           </div>
           <a class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">Təlimat</p></a
@@ -427,7 +430,7 @@ Həmçinin çox vaxt ürək çatışmazlığı inkişaf edir.</p>
             </div>
 
             <div class="block-7">
-              <h2>HARADAN ALMALI</h2>
+<!--              <h2>HARADAN ALMALI</h2>-->
               <div class="apt-container">
                 <a href="https://www.aptekonline.az/"></a>
                 <a href="http://www.zeferan.az/"></a>
