--- a/influcid-AZ/index-ru.html
+++ b/influcid-AZ/index-ru.html
@@ -40,7 +40,7 @@
                 <li><a class="navmenu" href="#block-3" >Состав</a></li>
                 <li><a class="navmenu" href="#block-4" >Как принимать</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Где купить</a></li>-->
-                 <li><a href="" >ru</a><br><a href="index.html" >az</a></li>
+                 <li><a class="active-nav" >ru</a><br><a href="index.html" >az</a></li>
               </ul>
             </div>
           </div>
@@ -52,7 +52,7 @@
               <!-- <a class="where-to-buy" href="#block-5" >Где купить</a> -->
 <!--            <a class="where-to-buy" href="#block-5" >Где купить</a>-->
             <div class="lang">
-              <a href="" >ru</a>
+              <a class="active-nav" >ru</a>
               <a href="index.html" >az</a>
             </div>
           </div>
