--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -39,7 +39,7 @@
                 <li><a class="navmenu" href="#block-3" >Tərkibi</a></li>
                 <li><a class="navmenu" href="#block-4" >Necə qəbul etməli</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-                <li><a href="" >az</a><br><a href="index-ru.html" >ru</a></li>
+                <li><a class="active-nav" >az</a><br><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -50,7 +50,7 @@
               <a class="navmenu" href="#block-4" >Necə qəbul etməli</a>
 <!--              <a class="where-to-buy" href="#block-5" >Haradan almalı</a>-->
             <div class="lang">
-              <a href="" >az</a>
+              <a class="active-nav" >az</a>
               <a href="index-ru.html" >ru</a>
             </div>
           </div>
