--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -76,13 +76,15 @@
     <div class="block-1">
       <div class="block-1__bg">
         <h1>
-          Spremite se za zim<br>
+          <p class="b1-top">CRNA BAZGA&nbsp;&nbsp;&nbsp;&nbsp;LJEKOVITA PELARGONIJA&nbsp;&nbsp;&nbsp;&nbsp;BETA GLUKAN</p>
+          Spremite se za zimu<br>
           <span>i otkrijte  kako će Obitelj superjunaka</span><br>
-          pobjediti zle viruse
+          <p class="b1-bottom">pobjediti zle viruse</p>
         </h1>
       </div>
       <h1 class="h1-mob">
-        Spremite se za zim<br>
+        <p class="b1-top">CRNA BAZGA&nbsp;&nbsp;&nbsp;&nbsp;LJEKOVITA PELARGONIJA&nbsp;&nbsp;&nbsp;&nbsp;BETA GLUKAN</p>
+        Spremite se za zimu<br>
         <span>i otkrijte  kako će Obitelj superjunaka</span><br>
         <span class="span-stupid">pobjediti zle viruse</span>
       </h1>
