--- a/Tansilotren-LT/index.html
+++ b/Tansilotren-LT/index.html
@@ -16,7 +16,7 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container logo-container-en" href="#top"></a>
-            <a class="where-to-buy-mob" href="">Kur įsigyti</a>
+            <a class="where-to-buy-mob" href="#block-4">Kur įsigyti</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Sudėtis ir veikimas</a>
                 <a class="navmenu" href="#block-2">Vartojimo būdas</a>
@@ -502,6 +502,7 @@
                 <a target="_blank" href="https://www.gintarine.lt/tonsilotren-tabletes-n40"></a>
                 <a target="_blank" href="https://www.nvaistine.lt/tonsilotren-tabletes-n40"></a>
                 <a target="_blank" href="https://www.benu.lt/dideles-nuolaidos-mazos-kainos/tonsilotren-125-mg10-mg50-mg5-mg25-mg-tabletes-n40"></a>
+                <a target="_blank" href="https://www.eurovaistine.lt/tonsilotren-tabletes-n40"></a>
             </div>
             <div class="map-text">
                 <h3>Įrodymai</h3>
