--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -431,6 +431,7 @@
                   <a target="_blank" href="https://www.gintarine.lt/influcid-tabletes-n40"></a>
                   <a target="_blank" href="https://www.nvaistine.lt/influcid-tabletes-n40"></a>
                   <a target="_blank" href="https://www.benu.lt/dideles-nuolaidos-mazos-kainos/influcid-tabletes-n40"></a>
+                  <a target="_blank" href="https://www.eurovaistine.lt/influcid-tabletes-n40"></a>
                 </div>
                 <ol>
                   <li>Influcid pakuotės lapelis</li>
